--- a/pom.xml
+++ b/pom.xml
@@ -69,7 +69,14 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <version>2.0.9</version>
+            <version>2.0.12</version>
+        </dependency>
+
+
+        <dependency>
+            <groupId>com.codeborne</groupId>
+            <artifactId>selenide</artifactId>
+            <version>7.2.0</version>
         </dependency>
 
         <!--        Allure report для отчетов-->
@@ -86,25 +93,31 @@
             <version>2.25.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-selenide</artifactId>
+            <version>2.25.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
         <plugins>
 
-<!--            <plugin>-->
-<!--                <groupId>org.apache.maven.plugins</groupId>-->
-<!--                <artifactId>maven-surefire-plugin</artifactId>-->
-<!--                <version>2.22.2</version>-->
-<!--                <dependencies>-->
-<!--                    <dependency>-->
-<!--                        <groupId>org.aspectj</groupId>-->
-<!--                        <artifactId>aspectjweaver</artifactId>-->
-<!--                        <version>1.9.21</version>-->
-<!--                        <scope>runtime</scope>-->
-<!--                    </dependency>-->
+            <!--            <plugin>-->
+            <!--                <groupId>org.apache.maven.plugins</groupId>-->
+            <!--                <artifactId>maven-surefire-plugin</artifactId>-->
+            <!--                <version>2.22.2</version>-->
+            <!--                <dependencies>-->
+            <!--                    <dependency>-->
+            <!--                        <groupId>org.aspectj</groupId>-->
+            <!--                        <artifactId>aspectjweaver</artifactId>-->
+            <!--                        <version>1.9.21</version>-->
+            <!--                        <scope>runtime</scope>-->
+            <!--                    </dependency>-->
 
-<!--                </dependencies>-->
-<!--            </plugin>-->
+            <!--                </dependencies>-->
+            <!--            </plugin>-->
 
             <plugin>
                 <groupId>io.qameta.allure</groupId>
